# NeonVector

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  compile_bloom_shaders.bat  fix-encoding.py  setup.bat  vcpkg.json
examples/: CMakeLists.txt
examples/01_HelloTriangle/: CMakeLists.txt  main.cpp
examples/02_LineDrawing/: CMakeLists.txt  main.cpp
examples/03_BasicShapes/: CMakeLists.txt  main.cpp
examples/04_BloomDemo/: CMakeLists.txt  main.cpp
examples/05_NeonPlayground/: CMakeLists.txt  main.cpp
examples/06_Asteroids/: CMakeLists.txt  main.cpp
include/NeonVector/: NeonVector.h
include/NeonVector/Core/: Application.h  Types.h
include/NeonVector/Effects/: BloomEffect.h  ParticleSystem.h  Trail.h
include/NeonVector/Graphics/: FullscreenQuad.h  LineBatcher.h  PostProcessManager.h  Primitives.h  RenderTarget.h
include/NeonVector/Math/: Vector2.h
shaders/: Bloom.hlsl  GaussianBlur.hlsl  GaussianBlur_Common.hlsli  GaussianBlur_HighQuality.hlsl  Line.hlsl
src/: CMakeLists.txt  DX12Context.h
src/Core/: Application.cpp  Dx12Context.cpp
src/Effects/: BloomEffect.cpp  ParticleSystem.cpp  Trail.cpp
src/Graphics/: FullscreenQuad.cpp  LineBatcher.cpp  PostProcessManager.cpp  Primitives.cpp  RenderTarget.cpp
